--- a/03.review/index.html
+++ b/03.review/index.html
@@ -22,7 +22,7 @@
             <img src="./person-1.jpeg" id="person-img" alt="" />
           </div>
           <h4 id="author">sara jones</h4>
-          <p id="'job">ux designer</p>
+          <p id="job">ux designer</p>
           <p id="info">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo aliquam qui pariatur reiciendis? Unde maxime itaque incidunt ex beatae reiciendis eveniet numquam, saepe, neque laboriosam assumenda mollitia reprehenderit sint! Praesentium.
           </p>
@@ -40,7 +40,6 @@
         </article>
       </section>
     </main>
-    <h1>review project</h1>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
