--- a/01.color flipper/hex.html
+++ b/01.color flipper/hex.html
@@ -26,6 +26,6 @@
       </div>
     </main>
     <!-- javascript -->
-    <script src="hex.js"></script>
+    <script type="module" src="hex.js"></script>
   </body>
 </html>
