--- a/01.color flipper/index.html
+++ b/01.color flipper/index.html
@@ -30,6 +30,6 @@
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
     </main>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
