--- a/03.review/index.html
+++ b/03.review/index.html
@@ -41,6 +41,6 @@
       </section>
     </main>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
