--- a/05.sidebar/index.html
+++ b/05.sidebar/index.html
@@ -66,6 +66,6 @@
       </ul>
     </aside>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
