--- a/04.navbar/index.html
+++ b/04.navbar/index.html
@@ -68,6 +68,6 @@
     </nav>
 
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
