--- a/08.menu/index.html
+++ b/08.menu/index.html
@@ -10,7 +10,37 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <section class="menu">
+      <!-- title -->
+      <div class="title">
+        <h2>our menu</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- filter buttons -->
+      <div class="btn-container">
+        <!-- <button class="filter-btn" type="button" data-id="all">all</button>
+        <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
+        <button class="filter-btn" type="button" data-id="lunch">lunch</button>
+        <button class="filter-btn" type="button" data-id="shakes">shakes</button> -->
+      </div>
+      <!-- menuitems -->
+      <div class="section-center">
+        <!-- single item -->
+        <article class="menu-item">
+          <img src="./menu-item.jpeg" class="photo" alt="menu item" />
+          <div class="item-info">
+            <header>
+              <h4>buttermilk pancakes</h4>
+              <h4 class="price">$15</h4>
+            </header>
+            <p class="item-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis enim minus non, facere facilis molestiae dolores id, eveniet sequi autem nesciunt ratione beatae necessitatibus earum similique. Provident corporis facilis nemo.
+            </p>
+          </div>
+        </article>
+        <!-- end single item -->
+      </div>
+    </section>
     <!-- javascript -->
     <script type="module" src="app.js"></script>
   </body>
