--- a/12.countdown-timer/index.html
+++ b/12.countdown-timer/index.html
@@ -56,6 +56,6 @@
       </article>
     </section>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
